# CS2-memflow-Example-of-an-algorithm

./: Cargo.toml  README.md  README_CN.md
read/: README_EN.md
read/src/: lib.rs  main.rs
read/src/config/: mod.rs
read/src/models/: memory.rs  mod.rs
read/src/services/: mod.rs  process_service.rs
read/src/utils/: memory.rs  mod.rs  scanner.rs
