[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
memflow = "0.2.3"
memflow-win32 = "0.2"
memflow-native = { git = "https://github.com/memflow/memflow-native" }
dataview = "1.0.1"
log = "0.4.22"
simple_logger = "5.0.0"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }

[dev-dependencies]
# 测试依赖项

[build-dependencies]
# 构建依赖项 